Fix bug header on mobile

--- a/src/container/About/about.scss
+++ b/src/container/About/about.scss
@@ -4,6 +4,7 @@
     align-items: flex-start;
     flex-wrap: wrap;
     margin-top: 2rem;
+    padding:2rem;
   }
   
   .app__profile-item {
