--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -60,7 +60,7 @@
   padding: 2rem 0 0;
   z-index: 100;
   right: 5%;
-  bottom: 5%;
+  bottom: 1%;
   position: absolute;
   display: flex;
   flex-direction: column;
@@ -69,7 +69,7 @@
 
   p {
     text-transform: uppercase;
-    color: var(--lightGray-color);
+    color: var(--gray-color);
   }
 }
 
